--- a/pdf/pubspec.yaml
+++ b/pdf/pubspec.yaml
@@ -1,9 +1,9 @@
 name: pdf
 author: David PHAM-VAN <dev.nfet.net@gmail.com>
 description: A pdf producer for Dart. It can create pdf files for both web or flutter.
-homepage: https://github.com/DavBfr/dart_pdf/tree/master/pdf
+homepage: https://github.com/gedetika/dart_pdf/tree/master/pdf
 repository: https://github.com/DavBfr/dart_pdf
-issue_tracker: https://github.com/DavBfr/dart_pdf/issues
+issue_tracker: https://github.com/gedetika/dart_pdf
 version: 3.1.0
 
 environment:
