--- a/printing/pubspec.yaml
+++ b/printing/pubspec.yaml
@@ -4,8 +4,8 @@ description: >
   Plugin that allows Flutter apps to generate and print documents to
   compatible printers on Android, iOS, macOS, Windows, and Linux,
   as well as web print.
-homepage: https://github.com/DavBfr/dart_pdf/tree/master/printing
-repository: https://github.com/DavBfr/dart_pdf
+homepage: https://github.com/gedetika/dart_pdf/tree/master/printing
+repository: https://github.com/gedetika/dart_pdf
 issue_tracker: https://github.com/DavBfr/dart_pdf/issues
 version: 5.0.4
 
